--- a/war/pom.xml
+++ b/war/pom.xml
@@ -9,17 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.eurder</groupId>
-            <artifactId>domain</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.eurder</groupId>
-            <artifactId>service</artifactId>
-        </dependency>
-    </dependencies>
+    <artifactId>war</artifactId>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
