fixed pom issue

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>war</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.eurder</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
